[package]
name = "victors-lambdas-metadata"
description = "Lambda execution environment metadata utility for Victor's Lambdas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
victors-lambdas-core.workspace = true
serde_json = "1.0"

[lints]
workspace = true
