[package]
name = "victors-lambdas-parameters"
description = "Parameter retrieval utility for Victor's Lambdas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
appconfig = ["dep:aws-sdk-appconfigdata"]
dynamodb = ["dep:aws-sdk-dynamodb"]
secrets = ["dep:aws-sdk-secretsmanager"]
ssm = ["dep:aws-sdk-ssm"]

[dependencies]
aws-sdk-appconfigdata = { version = "=1.74.0", optional = true }
aws-sdk-dynamodb = { version = "=1.82.0", optional = true }
aws-sdk-secretsmanager = { version = "=1.78.0", optional = true }
aws-sdk-ssm = { version = "=1.83.0", optional = true }
base64 = "0.22"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
