[package]
name = "victors-lambdas-tracer"
description = "Tracing utility for Victor's Lambdas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
opentelemetry = ["dep:opentelemetry"]
tracing = ["dep:tracing"]
xray = []
xray-daemon = ["xray"]

[dependencies]
victors-lambdas-core.workspace = true
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }

[lints]
workspace = true
