[package]
name = "victors-lambdas-validation"
description = "Validation utility for Victor's Lambdas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
jsonschema = ["dep:jsonschema", "dep:serde_json"]
jmespath = [
    "jsonschema",
    "dep:victors-lambdas-jmespath",
]

[dependencies]
victors-lambdas-core.workspace = true
victors-lambdas-jmespath = { workspace = true, optional = true }
jsonschema = { version = "0.46.5", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }

[lints]
workspace = true
